--- a/css/estilos.css
+++ b/css/estilos.css
@@ -17,42 +17,11 @@ body {
     font-weight: bold;
 }
 
-nav{
-    width:100%;
-    height: 75px;
-    padding: 10px;
-    margin: 0 auto;
-    background-color: white;
-    display:flex; 
-    justify-content: space-between;
-  
-}
-
-.funes{
+.navbar-brand img{
     padding: auto;
     width: 90px;
     height: 55px;
-    
-}
-
-.logo{
     padding-left: 10px;
-}
-
-nav ul{
-    list-style: none;
-    display: flex;
-    align-items: center;
-    padding: 15px;
-    padding-right: 50px;
-      
-}
-
-
-nav ul a{
-    color:rgb(92, 91, 91);
-    text-decoration: none;
-    padding: 10px;
 }
 
 img{
@@ -72,7 +41,7 @@ p{
     padding: 10px;
     margin: 1rem;
     width: auto;
-
+    
 }
 
 footer{
@@ -133,4 +102,46 @@ table{
 
 .quienes{
     text-align: center;
+}
+
+.card{
+    width: auto;
+}
+
+.row{
+    padding: 12px;
+}
+
+.color2{
+   color: aliceblue;
+}
+h5{
+    color: aquamarine;
+    font-weight: bold;
+}
+
+.btn:hover{
+    color:white;
+    background-color: rgb(23, 69, 156);
+    transform: scale(1.1);
+    border: none;
+}
+
+h1{
+    font-weight: bold;
+    font-size: 2rem;
+}
+
+.card-text{
+    padding: 1px;
+    margin-top: 0%;
+}
+
+.nav-link:hover{
+    background-color: rgb(167, 163, 163);
+    border-radius: 10px;
+}
+
+article{
+    padding: 20px;
 }
